syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/bloXroute-Labs/bxgateway-private-go/bxgateway/gateway";

// The gateway service definition.
package  gateway;
service Gateway {
  rpc BlxrTx (BlxrTxRequest) returns (BlxrTxReply) {}
  rpc BlxrBatchTX (BlxrBatchTXRequest) returns (BlxrBatchTXReply) {}
  rpc Peers (PeersRequest) returns (PeersReply) {}
  rpc TxStoreSummary(TxStoreRequest) returns (TxStoreReply) {}
  rpc GetTx(GetBxTransactionRequest) returns (GetBxTransactionResponse) {}
  rpc Stop (StopRequest) returns (StopReply){}
  rpc Version (VersionRequest) returns (VersionReply){}
  rpc Status (StatusRequest) returns (StatusResponse) {}
  rpc Subscriptions (SubscriptionsRequest) returns (SubscriptionsReply){}
  rpc DisconnectInboundPeer (DisconnectInboundPeerRequest) returns (DisconnectInboundPeerReply){}
  rpc NewTxs (NewTxsRequest) returns (stream NewTxsReply){}

}

message NewTxsRequest{
  string filters = 1;
}

message Tx{
  string hash = 1;
  string subscriptionID = 2;
  string nonce = 3;
  string gas_price = 4;
  string gas = 5;
  string to =6 ;
  string value = 7;
  string input = 8;
  string v = 9;
  string r = 10;
  string s = 11;
  string from = 12;
  string type = 13;
  string local_region = 14;
  string time = 15;
  string rawTx = 16;
}

message NewTxsReply{
  repeated Tx tx = 1;
}

message DisconnectInboundPeerRequest {
  string peer_ip = 1;
  int64 peer_port = 2;
  string public_key = 3;
}

message DisconnectInboundPeerReply {
  string status = 1;
}

message SubscriptionsRequest{

}

message Subscription{
  string account_id = 1;
  string tier = 2;
  string feed_name = 3;
  uint32 network = 4;
  string remote_addr = 5;
  string include = 6;
  string filter = 7;
  uint64 age = 8;
  uint64 messages_sent = 9;
}

message SubscriptionsReply {
  repeated Subscription subscriptions = 1;
}

message VersionRequest{
}

message VersionReply{
  string version = 1;
  string build_date = 2;
}

message StopRequest{
}

message StopReply{
}

message PeersRequest {
  string type = 1;
}

message RateSnapshot {
  int64 fiveMinute = 1;
  int64 oneHour = 2;
  int64 oneDay = 3;
}

message Peer {
  string ip = 1;
  string node_id = 2;
  string type = 3;
  string state = 4;
  uint32 network = 5;
  bool initiator = 6;
  int64 min_ms_from_peer = 7;
  int64 min_ms_to_peer = 8;
  int64 slow_traffic_count = 9;
  int64 min_ms_round_trip = 10;
  string account_id = 11;
  string account_tier = 12;
  int64 port = 13;
  bool disabled = 14;
  string mev_miner = 15;
  string mev_builder = 16;
  uint32 capability = 17;
  int64 unpaid_tx_burst_limit = 18;
  int64 paid_tx_burst_limit = 19;
  RateSnapshot unpaid_tx_burst_limit_excess = 20;
  RateSnapshot paid_tx_burst_limit_excess = 21;
  RateSnapshot paid_tx_throughput = 22;
  RateSnapshot unpaid_tx_throughput = 23;
  string trusted = 24;
}

message PeersReply {
  repeated Peer peers = 1;
}

message SendTXRequest{
}

message Transaction {
  string content = 1;
}

message Transactions {
  repeated Transaction transactions = 1;
}

message BxTransaction {
  string hash = 1;
  repeated uint64 short_ids = 2;
  google.protobuf.Timestamp add_time = 3;
}

message GetBxTransactionRequest {
  string hash = 1;
}

message GetBxTransactionResponse {
  BxTransaction tx = 1;
}

message TxStoreRequest {}

message TxStoreNetworkData{
  uint64 network = 4;
  uint64 tx_count = 1;
  uint64 short_id_count = 2;
  BxTransaction oldest_tx = 3;
}

message TxStoreReply {
  uint64 tx_count = 1;
  uint64 short_id_count = 2;
  repeated TxStoreNetworkData network_data = 3;

}

message TxAndSender {
  string transaction=1;
  bytes sender=2;
}

message BlxrBatchTXRequest {
  repeated TxAndSender transactions_and_senders = 1;
  bool nonce_monitoring = 2;
  bool next_validator = 3;
  int32 fallback = 4;
  bool validators_only = 5;
  bool node_validation = 6;
  int64 sending_time=7;
}

message BlxrTxRequest {
  string transaction = 1;
  bool nonce_monitoring = 2;
  bool next_validator = 3;
}

message BlxrTxReply {
  string tx_hash = 1;
}

message TxIndex {
  int32 idx = 1;
  string tx_hash = 2;
}

message ErrorIndex {
  int32 idx = 1;
  string error = 2;
}

message BlxrBatchTXReply {
  repeated TxIndex tx_hashes = 1;
  repeated ErrorIndex tx_errors = 2;
}

message StatusRequest {}

message AccountInfo {
  string account_id = 1;
  string expire_date = 2;
}

message NodePerformance {
  string since = 1;
  uint32 new_blocks_received_from_blockchain_node = 2;
  uint32 new_blocks_received_from_bdn = 3;
  uint32 new_blocks_seen = 4;
  uint32 new_block_messages_from_blockchain_node = 5;
  uint32 new_block_announcements_from_blockchain_node = 6;
  uint32 new_tx_received_from_blockchain_node = 7;
  uint32 new_tx_received_from_bdn = 8;
  uint32 tx_sent_to_node = 9;
  uint32 duplicate_tx_from_node = 10;
}

message WsConnStatus {
  string addr = 1;
  string conn_status = 2;
  string sync_status = 3;
}

message NodeConnStatus {
  string conn_status = 1;
  WsConnStatus ws_connection = 2;
  NodePerformance node_performance = 3;
  // Inbound is not in use and kept for back compatibility
  bool Inbound = 4;
  bool IsConnected = 5;
  bool Dynamic = 6;
  int64 Version = 7;
  string Name = 8;
  string ConnectedAt = 9;
}

message BDNConnStatus {
  string status = 1;
  string connected_at = 2;
  ConnectionLatency latency = 3;
}

message ConnectionLatency {
  int64 min_ms_from_peer = 7;
  int64 min_ms_to_peer = 8;
  int64 slow_traffic_count = 9;
  int64 min_ms_round_trip = 10;
}

message GatewayInfo {
  string version = 1;
  string node_id = 2;
  string ip_address = 3;
  string time_started = 4;
  string continent = 5;
  string country = 6;
  string network = 8;
  string startup_params = 7;
  string gateway_public_key = 9;
}

message StatusResponse {
  GatewayInfo gateway_info = 2;
  map<string, NodeConnStatus> nodes = 3;
  map<string, BDNConnStatus> relays = 4;
  AccountInfo account_info = 1;
}

message TxResult {
  string txHash = 1;
  string txContents = 2;
  bool localRegion = 3;
  string time = 4;
  string rawTx = 5;
}